# tsdm

./: .flake8  .gitignore  .gitignore-jetbrains  .gitignore-python  .gitignore-tex  .gitignore-vscode  .gitignore_bak  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .pylintrc  .pyre_configuration  CHANGELOG  CHANGELOG.md  CHANGELOG.rst  COMPARISON.md  CONTRIBUTING  CONTRIBUTING.md  CONTRIBUTING.rst  MANIFEST.in  README  README.md  README.rst  TODO.md  TODO.rst  TODOS.rst  __future__.pyproject.toml  backup_setup.py  collect_env.py  dataset_copy.py  datasets.ods  etdataset_backup.py  etdataset_old.py  get_datasets (new).sh  get_datasets.sh  kiwi_conda_environment.yaml  mypy.ini  package-lock.json  poetry.toml  pyproject.toml  (+13 more)
__old__/: dataset_cleaners.py  dataset_io.py  dataset_loaders.py  model_cleaners.py  model_io.py  model_loaders.py
bugs/: 4108.py  Untitled.ipynb  __module__Missing.py  abc_type_hint.py  abstractattribute.py  abstractmethod_signatures.py  backends.py  collect_env.py  data.json  decorator_issue.py  dispatch_on_list.py  flake8_W504.py  hparams.py  ipython_pprint.py  isort_profile_black.py  jit_export_staticmethod.py  list_setitem_slice.py  matplotlib_pandas_nullable.ipynb  overload_problem.py  pandas_zero_division.py  pickle_namedtupel.ipynb  pickle_subclass_hook.py  recursive_typehint.py  singledispatch_nump.py  test_usertuple.py  tmp.py  torch_runtime_0slice.py  torch_sampler.py  type_narrowing.py  typed_dict.py  typevar_subclass.py  wrap_cahnges_type.py
bugs/PERF/: einsum_slow.fwf  einsum_slow.ipynb  einsum_slow.py  inherit_signledispatch.ipynb  jit_property.ipynb  pivot_table_performance.ipynb  rezero.ipynb  subclassing_autojit.ipynb  to_frame.ipynb  walrus-generic.ipynb
bugs/pandas/: TimeDeltaIndex_slicing.py  concat_mulitindex_pyarrow.py  datetimeindex_freq.py  pandas_zero_division.py  pivot_dataframe_arrow.py  timestamp.py  unexpected_overflow.py
bugs/pandas-stubs/: dataframe_astype.py  dataframe_astype_str.py  dataframe_init.py  datetimeindex_init.py  index_is_not_sequence.py  no_attribute_copy.py
bugs/pyarrow/: timestamp_roundtrip.parquet  timestamp_roundtrip.py
bugs/pylint/: dataclass_constructor.py  isinstance_second_argument_not_valid_type.py  no_member_classvar.py  (+2 more)
data/: allthedata_16135.txt  allthedata_16137.txt  datasets.ods  dev.ipynb  model_dataset.ods  probability_distributions.ods  results_DeepState.ipynb
dev/: Associativity.ipynb  BeijingAirQuality.ipynb  ClassAttribute.ipynb  ClassProperty.ipynb  ClassPropertyIdea.ipynb  Electricity Experiment.ipynb  FIRST_EXPERIMENT.ipynb  MetaClasses.ipynb  Pytorch_Tensorboard_Example.ipynb  Untitled.ipynb  Untitled1.ipynb  approximate_gcd.ipynb  callable_type_hint.ipynb  custom-data-loader.ipynb  dataloader_list_test.ipynb  datasets_demo.ipynb  demo-Copy1.ipynb  demo.ipynb  demo.py  demo_dataset.ipynb  gcd_interval_arithmetic.ipynb  in_silico_data.h5  in_silico_data.ipynb  in_silico_tsdm.ipynb  json_Protocol.ipynb  maximum_entropy.ipynb  module_property.ipynb  new.py  pnorm.ipynb  pytorch-forecasting-example.ipynb  shuffle multiindex.ipynb  singledispatch.ipynb  speed_test.ipynb  srp_demo.ipynb  stacklevel.py  test.py  time_series_dataset_specification.md  tmp.ipynb  tmp.md  tmp.py
docs/: .$prediction.drawio.dtmp  Makefile  NOTE.md  README  RECIPES.rst  api.rst  conf.py  flowchart.drawio  flowchart.txt  includes.rst.txt  index.rst  index.rst.bak  index_autosummary  prediction.drawio  tsdm.datasets.rst  tsdm.losses.rst  tsdm.models.rst  tsdm.plot.rst  tsdm.rst  tsdm.util.rst
examples/: CONVNET-Copy1.ipynb  CONVNET.ipynb  CONVNET.py  FIXED_FINAL_PRODUCT.ipynb  FIXED_FINAL_PRODUCT.py  KIWI_FINAL_PRODUCT-ConvNet.ipynb  KIWI_FINAL_PRODUCT-Copy1.ipynb  KIWI_FINAL_PRODUCT-Copy2.ipynb  KIWI_FINAL_PRODUCT.ipynb  KIWI_FINAL_PRODUCT.py  KIWI_RUNS_EXPERIMENT.py  KIWI_RUNS_EXPERIMENT_iresnet.py  KIWI_RUNS_ForecastPlot-test.ipynb  KIWI_RUNS_ForecastPlot.ipynb  KIWI_RUNS_TASK.ipynb  PackedSequence.ipynb  SBATCH_iresnet.sh  Untitled.ipynb  custom-data-loader.ipynb  dataloader_list_test.ipynb  debug_info.py  demo-Copy1.ipynb  demo.ipynb  evaluate_linodenet_final_product.ipynb  final_od600.sh  final_od600_0.sh  final_od600_2.sh  final_od600_4.sh  final_product.sh  final_product_1.sh  in_silico_data.h5  in_silico_data.ipynb  in_silico_tsdm.ipynb  make_sbatch.py  maximum_entropy.ipynb  ode_rnn.ipynb  pytorch-forecasting-example.ipynb  results.ods  sbatch.sh  singledispatch.ipynb  (+6 more)
experiments/: CONVNET-Copy1.ipynb  CONVNET.ipynb  CONVNET.py  FIXED_FINAL_PRODUCT.ipynb  FIXED_FINAL_PRODUCT.py  KIWI_FINAL_PRODUCT-ConvNet.ipynb  KIWI_FINAL_PRODUCT-Copy1.ipynb  KIWI_FINAL_PRODUCT-Copy2.ipynb  KIWI_FINAL_PRODUCT.ipynb  KIWI_FINAL_PRODUCT.py  KIWI_RUNS_EXPERIMENT.ipynb  KIWI_RUNS_EXPERIMENT.py  KIWI_RUNS_EXPERIMENT_iresnet.py  KIWI_RUNS_ForecastPlot-test.ipynb  KIWI_RUNS_TASK.ipynb  Untitled.ipynb  condition_number_hessian_svd.ipynb  debug_info.py  evaluate_linodenet_final_product.ipynb  final_od600_1.sh  final_od600_3.sh  final_product_0.sh  final_product_2.sh  final_product_3.sh  final_product_4.sh  iresnet.sh  make_sbatch.py  results.ods  sbatch.sh
manifest/: latex.tex  multiset_brackets.tex
run/: clean_by_gitignore.sh  clean_history.md  generate_requirements.sh  get_dependencies.py  imported_attributes.py  no_mixed_args.py  pydeps.sh  setup_remote.sh  tmp.py  update_project_deps.sh  update_pyproject.py
src/: TECHNICAL_NOTE.md
templates/: .isort.cfg  .pylintrc  pylintrc.cfg
test/: __init__.py  test_basedataset.py  test_converters.py  test_electricity.py  test_encoders.py  test_insilico.py  test_physionet_2012.py  test_rnn_utils.py  test_split_preparation.py
tests/: __init__.py  test_cli.py  test_converters.py  test_dummy.py  test_numbers_magic.py  test_rnn_utils.py  test_split_preparation.py  time_import.sh
tsdm/: __init__.py  cli.py  config.py  converters.py  dataset_cleaners.py  dataset_io.py  dataset_loader.py  dataset_loaders.py  dataset_preprocessors.py  io.py  model_cleaners.py  model_io.py  model_loader.py  model_loaders.py  model_preprocessors.py  numbers_magic.py
(+1295 files in other folders)
